--- a/package.json
+++ b/package.json
@@ -3,14 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.2",
+    "firebase": "^5.5.2",
+    "history": "^4.7.2",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-color": "^2.14.1",
+    "react-dates": "^18.0.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "react-with-styles": "^3.2.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "serve": "^10.0.2",
+    "shortid": "^2.2.13"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
