--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
     "chart.js": "^2.7.2",
     "firebase": "^5.5.2",
     "history": "^4.7.2",
@@ -20,7 +22,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "serve": "^10.0.2",
-    "shortid": "^2.2.13"
+    "shortid": "^2.2.13",
+    "styled-components": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
