--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-dates": "^18.0.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router": "4.2",
+    "react-router-dom": "4.2.2",
     "react-scripts": "1.1.5",
     "react-with-styles": "^3.2.1",
     "redux": "^4.0.0",
