--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "4.2",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.5",
+    "react-switch": "^3.0.4",
     "react-with-styles": "^3.2.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
