--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.2.2",
-    "@material-ui/icons": "^3.0.1",
     "chart.js": "^2.7.2",
     "firebase": "^5.5.2",
     "history": "^4.7.2",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-accessible-accordion": "^2.4.5",
     "react-chartjs-2": "^2.7.4",
     "react-color": "^2.14.1",
     "react-datepicker": "^1.7.0",
