--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "firebase": "^5.5.2",
     "history": "^4.7.2",
@@ -12,7 +13,6 @@
     "react-chartjs-2": "^2.7.4",
     "react-color": "^2.14.1",
     "react-datepicker": "^1.7.0",
-    "react-dates": "^18.0.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "4.2",
@@ -20,11 +20,11 @@
     "react-scripts": "1.1.5",
     "react-switch": "^3.0.4",
     "react-with-styles": "^3.2.1",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "serve": "^10.0.2",
-    "shortid": "^2.2.13",
-    "styled-components": "^4.0.0"
+    "shortid": "^2.2.13"
   },
   "scripts": {
     "start": "react-scripts start",
